--- a/site/assets/less/flexi_containers.less
+++ b/site/assets/less/flexi_containers.less
@@ -99,7 +99,7 @@ body .alert.fc-iblock {
 }
 body .alert.fc-small.fc-iblock {
 	display: inline-block;
-	margin: 1px 4px;
+	margin: 1px 4px 1px 2px;
 	vertical-align: middle;
 	min-height: 1em;
 }
