--- a/site/assets/less/flexi_shared.less
+++ b/site/assets/less/flexi_shared.less
@@ -1568,8 +1568,6 @@ ul.thumbnails.image_picker_selector li div.thumbnail p {
 #flexicontent form select.fcfield_selectval.inlineval,
 #flexicontent form select.fcfield_selectmulval.inlineval,
 #flexicontent form input.fcfield_textval.inlineval {
-	margin-left: 0px;
-	margin-right: 0px;
 	min-width: 0;
 	width: auto;
 }
@@ -1724,9 +1722,10 @@ table.fc-form-tbl td.key > .fc-prop-lbl {
 			.btn.fc_img_preview_btn:before {
 				font-size: 24px;
 			}
+			.btn.fc_props_edit_btn,
 			.btn.fc_img_preview_btn {
 				width: unset;
-				margin: 0px 16px 0px 12px;
+				margin: 0px 8px 0px 2px;
 				padding: 8px 6px;
 				vertical-align: top;
 			}
